<resources>
    <string name="app_name">Car Loan</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Car Loan</string>
    <string name="second_fragment_label">Interest</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="car_loan">Car Loan</string>
    <string name="car_price">Car Price</string>
    <string name="down_payment">Down Payment</string>

    <string name="loan_period">Loan Period</string>
    <string name="salary">Salary (RM)</string>
    <string name="Graduates">I\'m a Uni graduates</string>
    <string name="close">Close</string>

    <string name="bank">Bank</string>
    <string name="interest">Interest Rate (%)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="tnc">Terms and Conditions</string>

</resources>